Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2341

Memory leak in qt4projectmanager plugin - QmlStandaloneAppWizard

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 2.1.0
    • None
    • None
    • Qt Creator master branch:
      commit 7aaaa750945cfd333404b20fa486e22bcb8dd732
      Author: Marco Bubke <marco.bubke@nokia.com>
      Date: Thu Sep 9 19:37:01 2010 +0200
    • b735b433a1785840af2df8828b3f359fc47839f2

    Description

      Hi,

      There is a memory leak in qt4projectmanager plugin - QmlStandaloneAppWizard

      http://qt.gitorious.org/qt-creator/qt-creator/blobs/master/src/plugins/qt4projectmanager/wizards/qmlstandaloneappwizard.cpp#line106

      src/plugins/qt4projectmanager/wizards/qmlstandaloneappwizard.cpp QmlStandaloneAppWizard::QmlStandaloneAppWizard(WizardType type)

      m_d is created:
      m_d(new QmlStandaloneAppWizardPrivate)

      but is never deleted. And it is just a pointer:

      private:
      class QmlStandaloneAppWizardPrivate *m_d;

      Fix proposal: e.g. QScopedPointer instead of?..

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            mdn Denis Mingulov
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes