QML/Mobile wizard: Final redundancy removal.

Task-number: QTCREATORBUG-2341 (en passant)
Reviewed-by: Alessandro Portale